--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -38,4 +38,5 @@ jobs:
         run: |
           echo "secret ${{ secrets.DUMMY_SECRET }}"
       - name: Echo with mask
-        run: echo "::add-mask::$MY_NAME"
+        run: |
+          echo "::add-mask::${{ env.MY_NAME }}"
