--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -39,4 +39,4 @@ jobs:
           echo "secret ${{ secrets.DUMMY_SECRET }}"
       - name: Echo with mask
         run: |
-          echo "::add-mask::${{ env.MY_NAME }}"
+          echo "::add-mask::MY_NAME"
