--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -66,3 +66,10 @@ jobs:
             }
         run: |
           echo "${{ env.SOME_KEY }}"
+      - name: Use secret dynamically
+        env:
+          SOME_KEY1: secrets['DUMMY_SECRET']
+          SOME_KEY2: ${{ secrets['DUMMY_SECRET'] }}
+        run: |
+          echo "${{ env.SOME_KEY1 }}"
+          echo "${{ env.SOME_KEY2 }}"
