--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -68,8 +68,6 @@ jobs:
           echo "${{ env.SOME_KEY }}"
       - name: Use secret dynamically
         env:
-          SOME_KEY1: secrets['DUMMY_SECRET']
-          SOME_KEY2: ${{ secrets['DUMMY_SECRET'] }}
+          SOME_KEY: ${{ secrets['DUMMY_SECRET'] }}
         run: |
-          echo "${{ env.SOME_KEY1 }}"
-          echo "${{ env.SOME_KEY2 }}"
+          echo "${{ env.SOME_KEY }}"
