--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -57,6 +57,8 @@ jobs:
             }
         run: |
           echo "${{ env.SOME_KEY }}"
+          echo "${{ fromJson(env.SOME_KEY).key1 }}"
+          echo "${{ fromJson(env.SOME_KEY).key2 }}"
       - name: Use env JSON with secret
         env:
           SOME_KEY: |-
