--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -73,3 +73,8 @@ jobs:
           SOME_KEY: ${{ secrets['DUMMY_SECRET'] }}
         run: |
           echo "${{ env.SOME_KEY }}"
+      - name: Use broken JSON
+        env:
+          SOME_KEY: {"key": }
+        run: |
+          echo "${{ fromJson(env.SOME_KEY) }}"
