--- a/.github/workflows/playground.yml
+++ b/.github/workflows/playground.yml
@@ -81,6 +81,12 @@ jobs:
       #    SOME_KEY: '{"key": }'
       #  run: |
       #    echo "${{ fromJson(env.SOME_KEY) }}"
+
+  job2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Use composite action
         env:
           FOO: foo
