--- a/.github/actions/sample/action.yml
+++ b/.github/actions/sample/action.yml
@@ -14,3 +14,7 @@ runs:
       run: |
         echo "${{ env.FOO }}"
       shell: bash
+    - name: Echo inputs
+      run: |
+        echo "${{ toJson(inputs) }}"
+      shell: bash
