--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -31,7 +31,7 @@ jobs:
     if: inputs.do-job1
     steps:
       - name: Raise error
-        if: ! inputs.job1-success
+        if: ${{ ! inputs.job1-success }
         run: |
           exit 1
 
@@ -43,6 +43,6 @@ jobs:
     timeout-minutes: 5
     steps:
       - name: Raise error
-        if: ! inputs.job2-success
+        if: ${{ ! inputs.job2-success }}
         run: |
           exit 1
