--- a/.github/workflows/flow.yml
+++ b/.github/workflows/flow.yml
@@ -38,7 +38,7 @@ jobs:
   job2:
     needs:
       - job1
-    if: inputs.job2 && ! failure()
+    if: inputs.do-job2 && ! failure()
     runs-on: ubuntu-latest
     timeout-minutes: 5
     steps:
